--- a/package.json
+++ b/package.json
@@ -6,17 +6,29 @@
     "version": "3.8.0"
   },
   "dependencies": {
-    "hexo": "^3.8.0",
-    "hexo-browsersync": "^0.3.0",
-    "hexo-generator-archive": "^0.1.5",
-    "hexo-generator-category": "^0.1.3",
-    "hexo-generator-index": "^0.2.1",
-    "hexo-generator-tag": "^0.2.0",
-    "hexo-render-pug": "^2.1.0",
-    "hexo-renderer-coffeescript": "^0.2.0",
-    "hexo-renderer-ejs": "^0.3.1",
-    "hexo-renderer-marked": "^0.3.2",
-    "hexo-renderer-stylus": "^0.3.3",
-    "hexo-server": "^0.3.3"
+    "autoprefixer": "latest",
+    "grunt": "^1.0.4",
+    "grunt-contrib-copy": "latest",
+    "grunt-contrib-watch": "latest",
+    "grunt-exec": "latest",
+    "grunt-gh-pages": "latest",
+    "grunt-postcss": "latest",
+    "grunt-responsive-images": "latest",
+    "hexo": "latest",
+    "hexo-browsersync": "latest",
+    "hexo-generator-archive": "latest",
+    "hexo-generator-category": "latest",
+    "hexo-generator-index": "latest",
+    "hexo-generator-tag": "latest",
+    "hexo-render-pug": "latest",
+    "hexo-renderer-ejs": "latest",
+    "hexo-renderer-marked": "latest",
+    "hexo-renderer-stylus": "latest",
+    "hexo-server": "latest",
+    "jit-grunt": "latest",
+    "matchdep": "latest",
+    "postcss-calc": "latest",
+    "postcss-css-variables": "latest",
+    "time-grunt": "latest"
   }
 }
